Changes towards version 0.3:
- Restored the CondBank to actually use condition variables properly
  (resolves a race condition under OpenBSD)
- Removed aspects of the legacy graphics code that are never used or that
  are redundant.  More 'C-like' use of the PRIMITIVE datatype.
- Fix various graphics glitches during  dialog.  Especially Spathi Eye,and ZFP
  Closes #23, #156 - PhracturedBlue
- Fix Syreen, KohrAh and Slylandro ship effects to not be screen
  size dependant (corolary to bug 93) - PhracturedBlue
- Line clipping is now handled correctly; fixes #28 (one pixel corruptions)
  and #198 (beam weapons changing direction) -Mika
- Vux warps in close (fixes bug 93) -from Nic
- Fixed lockup on lander-report (Bug #144 annd 187?) - PhracturedBlue
- Version # is now printed in the main menu, from Nic
- Added PC Shipyard + Hangar power lines animation;
  (closes #176) -fOSSiL

0.2:
- Shipyard/Outfit screens now use larger PC graphics;
  Outfit blueprint is properly aligned; from Nic
- Key config is now saved in user dir too.
  melee.cfg too again. - SvdB
- Added copyFile() - SvdB
- Pure mode partial screen updates are now more efficient;
  fixed 'crossfades not finished' problem -Mika
- Graduated colours for crew in shipyard, from Nic
- Alien dialog fixes: Talking Pet, Utwig, Mycon, Syreen -fOSSiL
- Updated all game, menu, melee and weapon sounds to original 3DO
  ones (extracted using various tools); some sounds were simply
  wrong: menu - "device success", weapons - arilou, slylandro, thraddash;
  others had bad sampling rates; (fixes #19) -fOSSiL
- Fixed Melnrome repeating "Please do not mention this subject again"
  text (bug #145) -fOSSiL
- Fixed load/save screen leaving characters when having more
  than 1000 units of some type of resources (bug #75) -fOSSiL
- Lowered Drawable memory footprint, made Frame safer - Martin
- Support for running without voice .ogg files present -PBlue
- Slider should now work correctly everywhere -PhracturedBlue